...
    @Environment(\.scenePhase) private var scenePhase

    var body: some View {
        TabView {
            DailyWalkView(vm: services.dailyWalkViewModel)
                .tabItem {
                    Label("Daily Walk", systemImage: "figure.walk")
                }
            CalendarScreenView(vm: services.calendarViewModel)
                .tabItem {
                    Label("Calendar", systemImage: "calendar")
                }
            JourneyView(vm: services.journeyViewModel)
...
